--- a/revisao-sozinha/index.html
+++ b/revisao-sozinha/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/cc3f8c12e5.js" crossorigin="anonymous"></script>
     <title>Vitral-Arte</title>
 </head>
 
@@ -26,10 +27,85 @@
 
         <div id="imagem-titulo">
             <img src="img/Vitral.png" alt="" class="imagem-cacalho">
-            <h1>Vitral Arte.</h1>
-            <h3>Especialistas em Vidros</h3>
         </div>
     </header>
+
+    <main>
+
+        <div class="sobre-nos">
+
+            <div class="text">
+                <h2 class="titulo-sobreNos">UM POUCO <span> SOBRE NÓS</span></h2>
+                <p class="texto-sobreNos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quod in.
+                    Debitis accusamus ea, quia
+                    repellat, itaque repellendus reprehenderit omnis nisi enim veritatis delectus a pariatur dolorum
+                    architecto.
+                    Autem, exercitationem.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi aperiam quaerat
+                    laboriosam, itaque odio temporibus obcaecati officia incidunt hic adipisci, molestias esse sequi
+                    odit ad quis! Sint, dolor molestias!
+                </p>
+            </div>
+            <img src="img/Equipe.png" alt="" class="imagem-equipe">
+        </div>
+
+        <div class="icones">
+            <div class="icone"> <i class="fa-regular fa-face-smile"></i>
+                <p>468</p>
+                <p>Clientes Felizes</p>
+            </div> <!-- smile -->
+
+
+            <div class="icone"><i class="fa-solid fa-book"></i>
+                <p>420</p>
+                <p>Projetos Realizados</p>
+            </div> <!-- book -->
+
+
+            <div class="icone"><i class="fa-solid fa-phone"></i>
+                <p>1500</p>
+                <p>Hora de suporte</p>
+            </div></i> <!-- tel -->
+
+
+            <div class="icone"> <i class="fa-solid fa-user"></i>
+                <p>84</p>
+                <p>Colaboradores</p>
+            </div>
+
+        </div>
+
+
+        <div class="nossoServico">
+            <h2>NOSSOS <span>SERVIÇOS</span> </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum hic praesentium minus illum odit officia
+                accusantium cupiditate vel temporibus rem! Temporibus voluptatem iure illum id quod accusantium, neque
+                consequuntur accusamus!</p>
+
+            <div class="container">
+                <div class="texto-quadrado">
+                    <p class="texto">Box Em Vidro Temperado Para Banheiros </p>
+                </div>
+                <div class="texto-quadrado">
+                    <p class="texto">Fechamento De Sacada E Guarda-Corpo</p>
+                </div>
+                <div class="texto-quadrado">
+                    <p class="texto">Espelho Decorativo Com Bisotê</p>
+                </div>
+            </div>
+
+
+        
+                <div class="text-quadrado">
+                    <p class="texto">Janelas E Portas Em Vidro Temperado</p>
+                </div>
+                <div class="text-quadrado">
+                    <p class="texto">Coberturas</p>
+                </div>
+            </div>
+
+        </div>
+    </main>
 </body>
 
 </html>
